fixed overflow

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -5,6 +5,10 @@
   overscroll-behavior: none;
 }
 
+.sliderContainer {
+  overflow: hidden;
+}
+
 .title {
   font-size: clamp(2.5rem, 8vw, 5rem);
   text-align: center;
